image align fix
lab 5 debug

--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -17,10 +17,6 @@ h1,h2,h3 {
   background-color: #86859d;
 }
 
-img {
-  float: right;
-}
-
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
